# 🪶 hazel: Minimal, and easy HTTP proxy to map storage provider items into HTTP endpoints
# Copyright 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "hazel"
description = "🪶 Minimal, and easy HTTP proxy to map storage provider items into HTTP endpoints"
version = "2.0.0"
edition = "2021"
authors = ["Noel Towa <cutie@floofy.dev>", "Noelware, LLC. <team@noelware.org>"]
homepage = "https://noelware.org/services/hazel"
documentation = "https://docs.noelware.org/services/hazel/current"

[dependencies]
aws-sdk-s3 = { version = "1.25.0", features = ["behavior-version-latest"] }
axum = { version = "0.7.5", features = ["macros"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
azalia = { git = "https://github.com/Noelware/core-rs", version = "0.1.0", rev = "e5802ca9c317431e667542d4b63d508685edae0d" }
azure_storage = "0.19.0"
color-eyre = { version = "0.6.3", features = ["issue-url", "tracing-error"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
hcl-rs = "0.18.0"
mimalloc = "0.1.41"
noelware-config = { git = "https://github.com/Noelware/core-rs", rev = "e5802ca9c317431e667542d4b63d508685edae0d", version = "0.1.0", features = [
    "derive",
] }
noelware-log = { git = "https://github.com/Noelware/core-rs", rev = "e5802ca9c317431e667542d4b63d508685edae0d", version = "0.1.0", features = [
    "writers",
] }
noelware-remi = { git = "https://github.com/Noelware/core-rs", rev = "e5802ca9c317431e667542d4b63d508685edae0d", version = "0.1.0", features = [
    "fs",
    "s3",
    "azure",
] }
noelware-serde = { git = "https://github.com/Noelware/core-rs", rev = "8eeb681c1efe1da8dc38504bf0c76e52ef543e32", version = "0.1.0", features = [
    "tracing",
] }
num_cpus = "1.16.0"
once_cell = "1.19.0"
owo-colors = { version = "4.0.0", features = ["supports-color"] }
rand = "0.8.5"
regex = "1.10.4"
remi = "0.7.1"
remi-azure = { version = "0.7.0", features = ["serde", "tracing"] }
remi-fs = { version = "0.7.1", features = ["serde", "tracing", "file-format"] }
remi-s3 = { version = "0.7.1", features = ["serde", "tracing"] }
sentry = "0.34.0"
sentry-tower = { version = "0.34.0", features = ["axum", "http"] }
sentry-tracing = "0.34.0"
serde = "1.0.200"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["catch-panic"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = "0.3.18"

[build-dependencies]
chrono = "0.4.38"
rustc_version = "0.4.0"
which = "6.0.1"

[package.metadata.cargo-machete]
ignored = [
    "hcl-rs",                # `hcl` is the crate name, `hcl-rs` is the crates.io name
    "tracing-log",           # ...idk
    "tracing-opentelemetry", # plan on add OpenTelemetry support soon
]
