# 🪶 Hazel: Easy to use read-only proxy to map objects to URLs
# Copyright 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "hazel"
description = "🪶 Easy to use read-only proxy to map objects to URLs"
version = "2.0.0"
edition = "2021"
authors = ["Noel Towa <cutie@floofy.dev>"]
homepage = "https://noelware.org/oss/hazel"
documentation = "https://docs.noelware.org/hazel/current"

[dependencies]
axum = { version = "0.8.0", features = ["macros"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
eyre = "0.6.12"
mimalloc = "0.1.43"
num_cpus = "1.16.0"
rand = "0.9.0"
sentry = "0.37.0"
sentry-tower = { version = "0.37.0", features = ["http", "axum"] }
sentry-tracing = "0.37.0"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "signal"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["catch-panic"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }

[dependencies.azalia]
version = "0.1.0"
git = "https://github.com/Noelware/azalia"
rev = "2ce853a9b7532bc6aa57c9a1672fb1763e1581ef"
features = [
    "regex",
    "lazy",

    "serde",
    "serde-tracing",

    "config",
    "config-url",
    "config-derive",

    "log",
    "log-writers",
    "log-tracing-log",

    "remi",
    "remi-azure",
    "remi-fs",
    "remi-s3",
    "remi-tracing",
    "remi-serde",
    "remi-export-crates",
    "remi-serde_json",
    "remi-serde_yaml_ng",
]

[build-dependencies]
chrono = "0.4.38"
rustc_version = "0.4.1"
which = "7.0.0"

[profile.release]
codegen-units = 1 # use a single codegen unit
opt-level = "s" # optimize for size
panic = "abort" # abort the process when a panic occurs
strip = true # strip all debug symbols
debug = 0 # disable debug information
lto = true # perform LTO on all crates (even our own)
