# 🪶 Hazel: Easy to use read-only proxy to map objects to URLs
# Copyright 2022-2025 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "hazel"
description = "🪶 Easy to use read-only proxy to map objects to URLs"
version = "2.0.0"
edition = "2024"
authors = ["Noel Towa <cutie@floofy.dev>"]
homepage = "https://noelware.org/oss/hazel"
documentation = "https://docs.noelware.org/hazel/current"
rust-version = "1.92"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
eyre = "0.6.12"
mimalloc = "0.1.43"
num_cpus = "1.16.0"
rand = "0.9.0"
sentry = "0.46.0"
sentry-tower = { version = "0.46.0", features = ["axum", "http"] }
sentry-tracing = "0.46.0"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "signal"] }
toml = "0.9.0"
tower-http = { version = "0.6.8", features = ["catch-panic"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }

[dependencies.azalia]
version = "0.1.12"
features = [
    "regex",

    "serde",
    "serde+tracing",

    "config",
    "config+macros",
    "config+sentry",
    "config+tracing",
    "config+url",

    "log",
    "log+tracing-log",
    "log+writers",

    "remi",
    "remi+azure",
    "remi+export-crates",
    "remi+fs",
    "remi+s3",
    "remi+serde",
    "remi+serde_json",
    "remi+serde_yaml_ng",
    "remi+tracing",
]

[build-dependencies]
chrono = "0.4.38"
rustc_version = "0.4.1"
which = "8.0.0"

[profile.release]
codegen-units = 1 # use a single codegen unit
opt-level = "s" # optimize for size
panic = "abort" # abort the process when a panic occurs
strip = true # strip all debug symbols
debug = 0 # disable debug information
lto = true # perform LTO on all crates (even our own)
